        * Improved documentation

0.80    2016-01-05
        + Added method "abstract"
        + Added method "select"
        + Added method "update"
        + Added method "abstract"
        + Added method "next"
        + Added "where in ... " condition to find
        + Added method "connect"
        * Improved error handling
        * Improved "new" method
        + Added LEFT JOIN
        * Optimization of data fetch
        * Improved documentation
        + Added package method "load_info"
        + "Smart accessors"
        + Added cookbook
        * Improved tests

0.84    2016-07-13
        + Added scalarref as an argument of accessor to set not-quoted data (e.g. to send database-specific functions)
        + Now multiobject accessor is a "ARS::Find" object too, you can use such method as "order_by", "desc" etc.
        * Small bugfixes

0.90    2016-07-16
        + Added "smart accessors" to methods "new", "find", "count".
        * Small fixes
        * Improved documentation

0.91    2017-08-19
        + New behavior of method "fetch"
        + Use DBIx::Connector if it's in the system
        + Added "group_by" method (thanks to @reindeer)
        * Imrpoved many-to-many objects manipulations
        * "asc", "desc" in every columns (thanks to @reindeer)
        * New API for "count" method (thanks to @reindeer)
        * New API for "last", "first" methods
        * Fixed connection bug
        * Renamed method "load_info" to "autoload"
        * Renamed "use_smart_saving" to "autosave"
        * Fixed typos

0.92    2017-08-20
        * Improve "next" method in favor less memory usage
        * Fixes

0.93    2017-08-21
        + Method "next" not takes a number of given objects. Default is 1
        * Fixed auto_load error
        * Fixed error messages
        * Different fixes

0.95    2017-09-22
        + Method "sql_fetch_all"
        + Method "sql_fetch_row"

0.96    2017-09-25
        * Improve relations